<?xml version="1.0" encoding="UTF-8"?>
<TabHost android:id="@android:id/tabhost"   xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent" android:layout_height="fill_parent">
    <LinearLayout 
    	android:orientation="vertical" 
    	android:layout_width="fill_parent" 
    	android:layout_height="fill_parent">
        <FrameLayout 
        	android:id="@android:id/tabcontent" 
        	android:layout_width="fill_parent" 
        	android:layout_height="0.0dip" 
        	android:layout_weight="1.0" />
        <TabWidget 
        	android:id="@android:id/tabs" 
        	android:visibility="gone"
        	android:layout_width="fill_parent" 
        	android:layout_height="wrap_content" 
        	android:checkedButton="@+id/radio_button1"
        	android:layout_weight="0.0" />
        <RadioGroup 
        	android:gravity="center_vertical" 
        	android:layout_gravity="bottom" 
        	android:orientation="horizontal" 
        	android:id="@+id/main_radio" 
        	android:background="@drawable/ic_menu_around_off" 
        	android:checkedButton="@+id/radio_button1"
        	android:layout_width="fill_parent" 
        	android:layout_height="50dp">
            <RadioButton 
            	android:id="@+id/radio_button1" 
            	android:text="@string/tab_home" 
            	android:drawableTop="@drawable/bg_tab_home" 
            	style="@style/main_tab_bottom" />
            <RadioButton 
            	android:id="@+id/radio_button2" 
            	android:text="@string/tab_sale" 
            	android:drawableTop="@drawable/bg_tab_sale" 
            	style="@style/main_tab_bottom" />
            <RadioButton 
            	android:id="@+id/radio_button3" 
            	android:text="@string/tab_order" 
            	android:drawableTop="@drawable/bg_tab_order" 
            	style="@style/main_tab_bottom" />
            <RadioButton 
            	android:id="@+id/radio_button4" 
            	android:text="@string/tab_more" 
            	android:drawableTop="@drawable/bg_tab_more" 
            	style="@style/main_tab_bottom" />
        </RadioGroup>
    </LinearLayout>
</TabHost>