<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">
      
    <RelativeLayout
        android:id="@+id/rel_more_top_bar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/top_bar"
        android:background="@drawable/account_bg_topbar" >
        
        <ImageView
            android:id="@+id/iv_logo_topbar"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:src="@drawable/logo_top_bar" />
        
         <TextView
            android:id="@+id/tv_topbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/iv_logo_topbar"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_check_table"
            android:layout_width="60dp"
            android:layout_height="@dimen/title_btn"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/bg_more_setting"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/check_table"
            android:textColor="@color/white"
            android:textSize="@dimen/check_table" />
    </RelativeLayout>

    <include 
        layout="@layout/sub_view_more" />
    
    <TextView 
        android:id="@+id/tv_login_out"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:clickable="true"
        android:background="@drawable/bg_login_out"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/login_out"
        android:textColor="@color/white"
        android:textSize="19sp"/>

</RelativeLayout>