<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_register_parent"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rel_topbar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/top_bar"
        android:background="@drawable/account_bg_topbar" >

        <ImageView
            android:id="@+id/iv_logo_topbar"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:src="@drawable/logo_top_bar" />

        <TextView
            android:id="@+id/tv_topbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/iv_logo_topbar"
            android:text="@string/register_title_text"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <include layout="@layout/sub_view_register" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:background="@color/lightwhite"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_register_back"
            android:layout_width="fill_parent"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1.0"
            android:background="@drawable/bg_user_btn"
            android:text="@string/btn_back"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1.0"
            android:background="@drawable/bg_user_btn"
            android:text="@string/btn_register_text"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>