<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="10dp"
    android:layout_weight="1"
    android:fadeScrollbars="true"
    android:fadingEdge="none" >

    <LinearLayout
        android:id="@+id/ll_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll_username"
            android:layout_width="fill_parent"
            android:layout_height="42dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_edit_selected"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:src="@drawable/account_bg_user_head_on" />

            <AutoCompleteTextView
                android:id="@+id/ed_username"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:background="@null"
                android:completionThreshold="1"
                android:hint="@string/hint_username"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_password"
            android:layout_width="fill_parent"
            android:layout_height="42dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edit_unselected"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:src="@drawable/account_bg_password_off" />

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:background="@null"
                android:fadingEdge="none"
                android:hint="@string/hint_password"
                android:password="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_repassword"
            android:layout_width="fill_parent"
            android:layout_height="42dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edit_unselected"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_repwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:src="@drawable/account_bg_password_off" />

            <EditText
                android:id="@+id/ed_repassword"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:background="@null"
                android:fadingEdge="none"
                android:hint="@string/hint_repassword"
                android:password="true" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_agreements"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/user_agreements_title"
            android:textSize="16sp" />
    </LinearLayout>

</ScrollView>