<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/rel_confrim_parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_comfirm_dialog" >

        <TextView
            android:id="@+id/tv_confrim_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/hint"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_confrim_title"
            android:layout_marginTop="5dp"
            android:src="@color/steelblue" />

        <TextView
            android:id="@+id/tv_confrim_msg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_confrim_title"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_confrim_msg"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1.0"
                android:background="@drawable/bg_pop_dialog_sure"
                android:clickable="true"
                android:gravity="center"
                android:textColor="@color/biggray"
                android:textSize="18sp"
                android:text="@string/submit_sure" />

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1.0"
                android:background="@drawable/bg_pop_dialog_cancel"
                android:clickable="true"
                android:gravity="center"
                android:textColor="@color/biggray"
                android:textSize="18sp"
                android:text="@string/submit_cancel" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>